<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image_signin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0" />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_for_sign_in_screen"/>

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="70dp"
        android:gravity="center"
        android:text="@string/you_already_have_account"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="signInClicked"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/signUpTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_up_button"
        android:textAllCaps="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/signUpTextView"
        android:background="@drawable/background_for_sign_in_button"

        />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_for_input"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        />
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_for_input"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        />
    <EditText
        android:id="@+id/inputPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_for_input"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        />
    <EditText
        android:id="@+id/inputAdress"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_for_input"
        android:hint="@string/adress"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/inputPhoneNumber"
        />
    <EditText
        android:id="@+id/inputLastName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_for_input"
        android:hint="@string/last_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/inputAdress"
        />

    <EditText
        android:id="@+id/inputFirstName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_for_input"
        android:hint="@string/first_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/inputLastName"
        />


    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_your_account"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/inputFirstName"
        />

    <TextView
        android:id="@+id/textYouHungry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="10dp"
        android:text="You Hungry?"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textSignIn"
        />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textYouHungry"
        />



</androidx.constraintlayout.widget.ConstraintLayout>